src/snapshots/lis_lang__parser__tests__comments_ignored_in_prog.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Prog {
        stmts: [
            Span {
                range: Pos {
                    offset: 27,
                    line: 2,
                    col: 8,
                }..Pos {
                    offset: 36,
                    line: 2,
                    col: 17,
                },
                node: Let {
                    keyword: Token {
                        sigil: Keyword(
                            Let,
                        ),
                        range: Pos {
                            offset: 27,
                            line: 2,
                            col: 8,
                        }..Pos {
                            offset: 30,
                            line: 2,
                            col: 11,
                        },
                    },
                    pat: Span {
                        range: Pos {
                            offset: 31,
                            line: 2,
                            col: 12,
                        }..Pos {
                            offset: 32,
                            line: 2,
                            col: 13,
                        },
                        node: Ident {
                            name: "x",
                        },
                    },
                    eq_tok: Token {
                        sigil: Eq,
                        range: Pos {
                            offset: 33,
                            line: 2,
                            col: 14,
                        }..Pos {
                            offset: 34,
                            line: 2,
                            col: 15,
                        },
                    },
                    init: Span {
                        range: Pos {
                            offset: 35,
                            line: 2,
                            col: 16,
                        }..Pos {
                            offset: 36,
                            line: 2,
                            col: 17,
                        },
                        node: Num {
                            val: 1.0,
                        },
                    },
                },
            },
            Span {
                range: Pos {
                    offset: 48,
                    line: 2,
                    col: 29,
                }..Pos {
                    offset: 57,
                    line: 2,
                    col: 38,
                },
                node: Let {
                    keyword: Token {
                        sigil: Keyword(
                            Let,
                        ),
                        range: Pos {
                            offset: 48,
                            line: 2,
                            col: 29,
                        }..Pos {
                            offset: 51,
                            line: 2,
                            col: 32,
                        },
                    },
                    pat: Span {
                        range: Pos {
                            offset: 52,
                            line: 2,
                            col: 33,
                        }..Pos {
                            offset: 53,
                            line: 2,
                            col: 34,
                        },
                        node: Ident {
                            name: "y",
                        },
                    },
                    eq_tok: Token {
                        sigil: Eq,
                        range: Pos {
                            offset: 54,
                            line: 2,
                            col: 35,
                        }..Pos {
                            offset: 55,
                            line: 2,
                            col: 36,
                        },
                    },
                    init: Span {
                        range: Pos {
                            offset: 56,
                            line: 2,
                            col: 37,
                        }..Pos {
                            offset: 57,
                            line: 2,
                            col: 38,
                        },
                        node: Num {
                            val: 2.0,
                        },
                    },
                },
            },
            Span {
                range: Pos {
                    offset: 67,
                    line: 3,
                    col: 8,
                }..Pos {
                    offset: 74,
                    line: 3,
                    col: 15,
                },
                node: Print {
                    keyword: Token {
                        sigil: Keyword(
                            Print,
                        ),
                        range: Pos {
                            offset: 67,
                            line: 3,
                            col: 8,
                        }..Pos {
                            offset: 72,
                            line: 3,
                            col: 13,
                        },
                    },
                    expr: Span {
                        range: Pos {
                            offset: 73,
                            line: 3,
                            col: 14,
                        }..Pos {
                            offset: 74,
                            line: 3,
                            col: 15,
                        },
                        node: Var {
                            name: "x",
                        },
                    },
                },
            },
        ],
    },
)
