src/snapshots/lis_lang__parser__tests__comments_inside_expr_and_args.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 9,
            line: 1,
            col: 8,
        }..Pos {
            offset: 125,
            line: 4,
            col: 54,
        },
        node: FuncCall {
            callee: Span {
                range: Pos {
                    offset: 9,
                    line: 1,
                    col: 8,
                }..Pos {
                    offset: 110,
                    line: 4,
                    col: 39,
                },
                node: PropAccess {
                    obj: Span {
                        range: Pos {
                            offset: 9,
                            line: 1,
                            col: 8,
                        }..Pos {
                            offset: 85,
                            line: 4,
                            col: 14,
                        },
                        node: PropAccess {
                            obj: Span {
                                range: Pos {
                                    offset: 9,
                                    line: 1,
                                    col: 8,
                                }..Pos {
                                    offset: 80,
                                    line: 4,
                                    col: 9,
                                },
                                node: FuncCall {
                                    callee: Span {
                                        range: Pos {
                                            offset: 9,
                                            line: 1,
                                            col: 8,
                                        }..Pos {
                                            offset: 13,
                                            line: 1,
                                            col: 12,
                                        },
                                        node: Var {
                                            name: "func",
                                        },
                                    },
                                    paren_l: Token {
                                        sigil: ParenL,
                                        range: Pos {
                                            offset: 13,
                                            line: 1,
                                            col: 12,
                                        }..Pos {
                                            offset: 14,
                                            line: 1,
                                            col: 13,
                                        },
                                    },
                                    args: [
                                        Span {
                                            range: Pos {
                                                offset: 27,
                                                line: 2,
                                                col: 12,
                                            }..Pos {
                                                offset: 28,
                                                line: 2,
                                                col: 13,
                                            },
                                            node: Num {
                                                val: 1.0,
                                            },
                                        },
                                        Span {
                                            range: Pos {
                                                offset: 69,
                                                line: 3,
                                                col: 24,
                                            }..Pos {
                                                offset: 70,
                                                line: 3,
                                                col: 25,
                                            },
                                            node: Num {
                                                val: 2.0,
                                            },
                                        },
                                    ],
                                    paren_r: Token {
                                        sigil: ParenR,
                                        range: Pos {
                                            offset: 79,
                                            line: 4,
                                            col: 8,
                                        }..Pos {
                                            offset: 80,
                                            line: 4,
                                            col: 9,
                                        },
                                    },
                                },
                            },
                            dot_tok: Token {
                                sigil: Dot,
                                range: Pos {
                                    offset: 80,
                                    line: 4,
                                    col: 9,
                                }..Pos {
                                    offset: 81,
                                    line: 4,
                                    col: 10,
                                },
                            },
                            prop: "prop",
                        },
                    },
                    dot_tok: Token {
                        sigil: Dot,
                        range: Pos {
                            offset: 100,
                            line: 4,
                            col: 29,
                        }..Pos {
                            offset: 101,
                            line: 4,
                            col: 30,
                        },
                    },
                    prop: "toString",
                },
            },
            paren_l: Token {
                sigil: ParenL,
                range: Pos {
                    offset: 111,
                    line: 4,
                    col: 40,
                }..Pos {
                    offset: 112,
                    line: 4,
                    col: 41,
                },
            },
            args: [],
            paren_r: Token {
                sigil: ParenR,
                range: Pos {
                    offset: 124,
                    line: 4,
                    col: 53,
                }..Pos {
                    offset: 125,
                    line: 4,
                    col: 54,
                },
            },
        },
    },
)
