src/snapshots/lis_lang__parser__tests__expr_chained_comparison_simple.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 10,
            line: 0,
            col: 10,
        },
        node: Compare {
            left: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: Num {
                    val: 0.0,
                },
            },
            comparators: [
                (
                    Less,
                    Token {
                        sigil: Less,
                        range: Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        }..Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        },
                    },
                    Span {
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                        node: Var {
                            name: "x",
                        },
                    },
                ),
                (
                    Less,
                    Token {
                        sigil: Less,
                        range: Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        }..Pos {
                            offset: 7,
                            line: 0,
                            col: 7,
                        },
                    },
                    Span {
                        range: Pos {
                            offset: 8,
                            line: 0,
                            col: 8,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                        node: Num {
                            val: 10.0,
                        },
                    },
                ),
            ],
        },
    },
)
