src/snapshots/lis_lang__parser__tests__expr_chained_comparison_with_logical_op.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 22,
            line: 0,
            col: 22,
        },
        node: BinOp {
            left: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: CompareChain {
                    left: Span {
                        range: Pos {
                            offset: 0,
                            line: 0,
                            col: 0,
                        }..Pos {
                            offset: 1,
                            line: 0,
                            col: 1,
                        },
                        node: Num {
                            val: 0.0,
                        },
                    },
                    comparators: [
                        (
                            Span {
                                range: Pos {
                                    offset: 2,
                                    line: 0,
                                    col: 2,
                                }..Pos {
                                    offset: 3,
                                    line: 0,
                                    col: 3,
                                },
                                node: Less,
                            },
                            Span {
                                range: Pos {
                                    offset: 4,
                                    line: 0,
                                    col: 4,
                                }..Pos {
                                    offset: 5,
                                    line: 0,
                                    col: 5,
                                },
                                node: Var {
                                    name: "x",
                                },
                            },
                        ),
                        (
                            Span {
                                range: Pos {
                                    offset: 6,
                                    line: 0,
                                    col: 6,
                                }..Pos {
                                    offset: 7,
                                    line: 0,
                                    col: 7,
                                },
                                node: Less,
                            },
                            Span {
                                range: Pos {
                                    offset: 8,
                                    line: 0,
                                    col: 8,
                                }..Pos {
                                    offset: 10,
                                    line: 0,
                                    col: 10,
                                },
                                node: Num {
                                    val: 10.0,
                                },
                            },
                        ),
                    ],
                },
            },
            op: Span {
                range: Pos {
                    offset: 11,
                    line: 0,
                    col: 11,
                }..Pos {
                    offset: 14,
                    line: 0,
                    col: 14,
                },
                node: And,
            },
            right: Span {
                range: Pos {
                    offset: 15,
                    line: 0,
                    col: 15,
                }..Pos {
                    offset: 22,
                    line: 0,
                    col: 22,
                },
                node: CompareChain {
                    left: Span {
                        range: Pos {
                            offset: 15,
                            line: 0,
                            col: 15,
                        }..Pos {
                            offset: 16,
                            line: 0,
                            col: 16,
                        },
                        node: Var {
                            name: "y",
                        },
                    },
                    comparators: [
                        (
                            Span {
                                range: Pos {
                                    offset: 17,
                                    line: 0,
                                    col: 17,
                                }..Pos {
                                    offset: 19,
                                    line: 0,
                                    col: 19,
                                },
                                node: Eq,
                            },
                            Span {
                                range: Pos {
                                    offset: 20,
                                    line: 0,
                                    col: 20,
                                }..Pos {
                                    offset: 22,
                                    line: 0,
                                    col: 22,
                                },
                                node: Num {
                                    val: 20.0,
                                },
                            },
                        ),
                    ],
                },
            },
        },
    },
)
