src/snapshots/lis_lang__parser__tests__expr_comparison_operators.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 29,
            line: 0,
            col: 29,
        },
        node: CompareChain {
            left: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 1,
                    line: 0,
                    col: 1,
                },
                node: Var {
                    name: "a",
                },
            },
            comparators: [
                (
                    Span {
                        range: Pos {
                            offset: 2,
                            line: 0,
                            col: 2,
                        }..Pos {
                            offset: 3,
                            line: 0,
                            col: 3,
                        },
                        node: Less,
                    },
                    Span {
                        range: Pos {
                            offset: 4,
                            line: 0,
                            col: 4,
                        }..Pos {
                            offset: 5,
                            line: 0,
                            col: 5,
                        },
                        node: Var {
                            name: "b",
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 6,
                            line: 0,
                            col: 6,
                        }..Pos {
                            offset: 8,
                            line: 0,
                            col: 8,
                        },
                        node: LessEq,
                    },
                    Span {
                        range: Pos {
                            offset: 9,
                            line: 0,
                            col: 9,
                        }..Pos {
                            offset: 10,
                            line: 0,
                            col: 10,
                        },
                        node: Var {
                            name: "c",
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 11,
                            line: 0,
                            col: 11,
                        }..Pos {
                            offset: 12,
                            line: 0,
                            col: 12,
                        },
                        node: Greater,
                    },
                    Span {
                        range: Pos {
                            offset: 13,
                            line: 0,
                            col: 13,
                        }..Pos {
                            offset: 14,
                            line: 0,
                            col: 14,
                        },
                        node: Var {
                            name: "d",
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 15,
                            line: 0,
                            col: 15,
                        }..Pos {
                            offset: 17,
                            line: 0,
                            col: 17,
                        },
                        node: GreaterEq,
                    },
                    Span {
                        range: Pos {
                            offset: 18,
                            line: 0,
                            col: 18,
                        }..Pos {
                            offset: 19,
                            line: 0,
                            col: 19,
                        },
                        node: Var {
                            name: "e",
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 20,
                            line: 0,
                            col: 20,
                        }..Pos {
                            offset: 22,
                            line: 0,
                            col: 22,
                        },
                        node: Eq,
                    },
                    Span {
                        range: Pos {
                            offset: 23,
                            line: 0,
                            col: 23,
                        }..Pos {
                            offset: 24,
                            line: 0,
                            col: 24,
                        },
                        node: Var {
                            name: "f",
                        },
                    },
                ),
                (
                    Span {
                        range: Pos {
                            offset: 25,
                            line: 0,
                            col: 25,
                        }..Pos {
                            offset: 27,
                            line: 0,
                            col: 27,
                        },
                        node: NotEq,
                    },
                    Span {
                        range: Pos {
                            offset: 28,
                            line: 0,
                            col: 28,
                        }..Pos {
                            offset: 29,
                            line: 0,
                            col: 29,
                        },
                        node: Var {
                            name: "g",
                        },
                    },
                ),
            ],
        },
    },
)
