src/snapshots/lis_lang__parser__tests__expr_func_call.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 10,
            line: 0,
            col: 10,
        },
        node: FuncCall {
            callee: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                },
                node: Var {
                    name: "func",
                },
            },
            paren_l: Span {
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                },
                node: (),
            },
            args: [
                Span {
                    range: Pos {
                        offset: 5,
                        line: 0,
                        col: 5,
                    }..Pos {
                        offset: 6,
                        line: 0,
                        col: 6,
                    },
                    node: Var {
                        name: "a",
                    },
                },
                Span {
                    range: Pos {
                        offset: 8,
                        line: 0,
                        col: 8,
                    }..Pos {
                        offset: 9,
                        line: 0,
                        col: 9,
                    },
                    node: Var {
                        name: "b",
                    },
                },
            ],
            paren_r: Span {
                range: Pos {
                    offset: 9,
                    line: 0,
                    col: 9,
                }..Pos {
                    offset: 10,
                    line: 0,
                    col: 10,
                },
                node: (),
            },
        },
    },
)
