src/snapshots/lis_lang__parser__tests__expr_func_call_just_comma.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "expression",
        found: Some(
            Token {
                sigil: Comma,
                range: Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                }..Pos {
                    offset: 6,
                    line: 0,
                    col: 6,
                },
            },
        ),
    },
)
