src/snapshots/lis_lang__parser__tests__expr_func_call_missing_comma.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "comma or closing parenthesis of function arguments",
        found: Some(
            Span {
                range: Pos {
                    offset: 7,
                    line: 0,
                    col: 7,
                }..Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                },
                node: Ident {
                    name: "b",
                },
            },
        ),
    },
)
