src/snapshots/lis_lang__parser__tests__expr_func_call_missing_paren.snap
---
source: src/parser.tests.rs
expression: ast
---
Err(
    ParseError {
        expected: "comma or closing parenthesis of function arguments",
        found: None,
    },
)
