src/snapshots/lis_lang__parser__tests__expr_func_call_trailing_comma.snap
---
source: src/parser.tests.rs
expression: ast
---
Ok(
    Span {
        range: Pos {
            offset: 0,
            line: 0,
            col: 0,
        }..Pos {
            offset: 9,
            line: 0,
            col: 9,
        },
        node: FuncCall {
            callee: Span {
                range: Pos {
                    offset: 0,
                    line: 0,
                    col: 0,
                }..Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                },
                node: Var {
                    name: "func",
                },
            },
            paren_l: Token {
                sigil: ParenL,
                range: Pos {
                    offset: 4,
                    line: 0,
                    col: 4,
                }..Pos {
                    offset: 5,
                    line: 0,
                    col: 5,
                },
            },
            args: [
                Span {
                    range: Pos {
                        offset: 5,
                        line: 0,
                        col: 5,
                    }..Pos {
                        offset: 6,
                        line: 0,
                        col: 6,
                    },
                    node: Var {
                        name: "a",
                    },
                },
            ],
            paren_r: Token {
                sigil: ParenR,
                range: Pos {
                    offset: 8,
                    line: 0,
                    col: 8,
                }..Pos {
                    offset: 9,
                    line: 0,
                    col: 9,
                },
            },
        },
    },
)
